v1.0.1
Toggle accelerometer on and off
Physics model switched from double to float and Math package to FloatMath package for performance gains.
Drag coefficient altered to give more realistic swinging times
Bugfix: When touch holding a ball the other balls continue to react correctly
Sound/Accelerometer Menu Items now have toggle graphics

v1.0.0
Initial version